--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,10 @@
 packages:
   - "config/"
   - "packages/*"
+  - "playgrounds/*"
   - "docs/"
 
 catalog:
   "typescript": "5.8.3" # https://www.npmjs.com/package/typescript
   "vite": "6.2.6" # https://www.npmjs.com/package/vite
+  "eslint": "9.24.0" # https://www.npmjs.com/package/eslint
