--- a/playgrounds/vanilla/tsconfig.json
+++ b/playgrounds/vanilla/tsconfig.json
@@ -1,17 +1,26 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "ES2022",
     "jsx": "react-jsx",
     "jsxImportSource": "@katu/runtime",
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-    "rootDir": "./",
-    "outDir":  "./dist",
-    "types": ["./ts-env.d.ts"]
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": false,
+    "moduleDetection": "force",
+    "noEmit": true,
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedSideEffectImports": true
   },
   "include": ["src"]
 }
