--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -37,7 +37,9 @@
   "devDependencies": {
     "@katu/config": "workspace:*",
     "@types/hast": "^3.0.4",
+    "@vitest/browser": "^3.1.1",
     "eslint": "catalog:",
-    "tsup": "^8.4.0"
+    "tsup": "^8.4.0",
+    "vitest": "^3.1.1"
   }
 }
