--- a/playgrounds/vanilla/tsconfig.json
+++ b/playgrounds/vanilla/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "jsx": "react-jsx",
-    "jsxImportSource": "@katu/runtime",
+    "jsx": "preserve",
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
