feat: enhance defineCustomElement with constructor callback and add new App component
- Updated defineCustomElement to include a constructor callback for better control during initialization.
- Added a new App component in the vanilla playground that utilizes signals for state management and renders a dynamic UI.
- Integrated event handling for button clicks to update the click count.
- Improved the rendering logic to efficiently update the DOM using shadow DOM.
- Added consola for logging during the build process in Vite configuration.
- Updated package.json to include consola as a dependency.

--- a/playgrounds/vanilla/package.json
+++ b/playgrounds/vanilla/package.json
@@ -13,5 +13,8 @@
     "@katu/transpiler": "workspace:*",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "consola": "^3.4.2"
   }
 }
