--- a/packages/transpiler/package.json
+++ b/packages/transpiler/package.json
@@ -28,7 +28,7 @@
     "build": "tsup",
     "watch": "tsup --watch",
     "lint": "eslint .",
-    "test": "tsup && vitest"
+    "test": "tsup && vitest run --coverage"
   },
   "dependencies": {
     "@babel/generator": "^7.27.0",
@@ -41,6 +41,7 @@
     "@types/babel__generator": "^7.27.0",
     "@types/babel__traverse": "^7.20.7",
     "@types/node": "^22.15.3",
+    "@vitest/coverage-v8": "3.1.1",
     "eslint": "catalog:",
     "tsup": "^8.4.0",
     "vitest": "^3.1.1"
