--- a/playgrounds/vanilla/package.json
+++ b/playgrounds/vanilla/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@katu/reactivity": "workspace:*",
+    "@katu/runtime": "workspace:*",
     "@katu/transpiler": "workspace:*",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
