--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -7,6 +7,19 @@
       "types": "./dist/main.d.ts",
       "import": "./dist/main.mjs",
       "require": "./dist/main.js"
+    },
+    "./JSX": {
+      "types": "./types/JSX.namespace.d.ts"
+    },
+    "./jsx-runtime": {
+      "types": "./dist/jsx-runtime.d.ts",
+      "import": "./dist/jsx-runtime.mjs",
+      "require": "./dist/jsx-runtime.js"
+    },
+    "./jsx-dev-runtime": {
+      "types": "./dist/jsx-dev-runtime.d.ts",
+      "import": "./dist/jsx-dev-runtime.mjs",
+      "require": "./dist/jsx-dev-runtime.js"
     }
   },
   "scripts": {
@@ -17,6 +30,7 @@
   },
   "devDependencies": {
     "@katu/config": "workspace:*",
+    "@katu/reactivity": "workspace:*",
     "@vitest/coverage-v8": "3.1.1",
     "eslint": "catalog:",
     "tsup": "^8.4.0",
