--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "p:rtv": "pnpm -C packages/reactivity",
     "p:rt": "pnpm -C packages/runtime",
     "p:ts": "pnpm -C packages/transpiler",
-
-    "pg:vanilla": "pnpm -C playgrounds/vanilla"
+    "pg:vanilla": "pnpm -C playgrounds/vanilla",
+    "watch": "concurrently \"pnpm p:core watch\" \"pnpm p:rtv watch\" \"pnpm p:rt watch\" \"pnpm p:ts watch\""
   },
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "pnpm": "10.8.1"
   },
   "packageManager": "pnpm@10.8.1",
