--- a/playgrounds/vanilla/package.json
+++ b/playgrounds/vanilla/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@katu/reactivity": "workspace:*",
     "@katu/runtime": "workspace:*",
+    "clsx": "^2.1.1",
     "typescript": "~5.7.2",
     "vite": "catalog:"
   },
