--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@katu/reactivity",
+  "name": "@tora/reactivity",
   "private": false,
   "version": "1.0.0",
   "description": "",
@@ -20,7 +20,7 @@
     "alien-signals": "^1.0.13"
   },
   "devDependencies": {
-    "@katu/config": "workspace:*",
+    "@tora/config": "workspace:*",
     "eslint": "catalog:",
     "tsup": "^8.4.0",
     "vitest": "^3.1.1"
