--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@katu/runtime",
+  "name": "@tora/runtime",
   "version": "0.0.0",
   "private": false,
   "exports": {
@@ -29,8 +29,8 @@
     "test": "tsup && vitest run --coverage"
   },
   "devDependencies": {
-    "@katu/config": "workspace:*",
-    "@katu/reactivity": "workspace:*",
+    "@tora/config": "workspace:*",
+    "@tora/reactivity": "workspace:*",
     "@vitest/coverage-v8": "3.1.1",
     "eslint": "catalog:",
     "tsup": "^8.4.0",
