--- a/playgrounds/vanilla/tsconfig.json
+++ b/playgrounds/vanilla/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "jsx": "react-jsx",
-    "jsxImportSource": "@katu/runtime",
+    "jsxImportSource": "@tora/runtime",
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
