--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,3 +8,4 @@ catalog:
   "typescript": "5.8.3" # https://www.npmjs.com/package/typescript
   "vite": "6.2.7" # https://www.npmjs.com/package/vite
   "eslint": "9.24.0" # https://www.npmjs.com/package/eslint
+  "tsup": "^8.4.0" # https://www.npmjs.com/package/tsup
