--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@tora/reactivity",
-  "private": false,
   "version": "1.0.0",
+  "private": false,
+  "packageManager": "pnpm@10.8.1",
   "description": "",
   "exports": {
     ".": {
@@ -15,14 +16,13 @@
     "watch": "tsup --watch",
     "lint": "eslint ."
   },
-  "packageManager": "pnpm@10.8.1",
   "dependencies": {
     "alien-signals": "^1.0.13"
   },
   "devDependencies": {
     "@tora/config": "workspace:*",
     "eslint": "catalog:",
-    "tsup": "^8.4.0",
+    "tsup": "catalog:",
     "vitest": "^3.1.1"
   }
 }
