--- a/packages/tora/package.json
+++ b/packages/tora/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "@tora/runtime",
+  "name": "tora",
   "version": "0.0.0",
   "private": false,
+  "description": "Framework for creating custom elements with JSX function components",
   "exports": {
     ".": {
       "types": "./dist/main.d.ts",
       "import": "./dist/main.mjs",
       "require": "./dist/main.js"
     },
-    "./JSX": {
-      "types": "./types/JSX.namespace.d.ts"
+    "./reactivity": {
+      "types": "./dist/reactivity.d.ts",
+      "import": "./dist/reactivity.mjs",
+      "require": "./dist/reactivity.js"
+    },
+    "./runtime": {
+      "types": "./dist/runtime.d.ts",
+      "import": "./dist/runtime.mjs",
+      "require": "./dist/runtime.js"
     },
     "./jsx-runtime": {
       "types": "./dist/jsx-runtime.d.ts",
@@ -22,19 +30,24 @@
       "require": "./dist/jsx-dev-runtime.js"
     }
   },
+  "files": [
+    "README.md",
+    "dist",
+    "package.json"
+  ],
   "scripts": {
     "build": "tsup",
     "watch": "tsup --watch",
-    "lint": "eslint .",
-    "test": "tsup && vitest run --coverage"
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "@tora/reactivity": "workspace:*",
+    "@tora/runtime": "workspace:*"
   },
   "devDependencies": {
     "@tora/config": "workspace:*",
-    "@tora/reactivity": "workspace:*",
-    "@vitest/coverage-v8": "3.1.1",
     "eslint": "catalog:",
     "tsup": "catalog:",
-    "typescript": "catalog:",
-    "vitest": "^3.1.1"
+    "typescript": "catalog:"
   }
 }
