--- a/playgrounds/vanilla/package.json
+++ b/playgrounds/vanilla/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@tora/reactivity": "workspace:*",
-    "@tora/runtime": "workspace:*",
     "clsx": "^2.1.1",
     "typescript": "~5.7.2",
     "vite": "catalog:"
   },
   "dependencies": {
-    "consola": "^3.4.2"
+    "consola": "^3.4.2",
+    "tora": "workspace:*",
+    "zod": "3.25.0-beta.20250519T033844"
   }
 }
