--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,10 +1,10 @@
 name: Release Drafter
 
 on:
-  # pull_request event is required only for autolabeler
-  pull_request:
+  # pull_request_target event is required for autolabeler
+  pull_request_target:
     # Only following types are handled by the action, but one can default to all as well
-    types: [opened, reopened, synchronize]
+    types: [opened, reopened, synchronize, edited]
 
 permissions:
   contents: write
@@ -13,12 +13,15 @@ permissions:
 
 jobs:
   update_release_draft:
+    # トップレベルの権限設定
     permissions:
       # write permission is required to create a github release
       contents: write
       # write permission is required for autolabeler
       # otherwise, read permission is required at least
       pull-requests: write
+      # 必要な権限を追加
+      issues: write
     runs-on: ubuntu-latest
     steps:
       # (Optional) GitHub Enterprise requires GHE_HOST variable set
@@ -26,10 +29,12 @@ jobs:
       #  run: |
       #    echo "GHE_HOST=${GITHUB_SERVER_URL##https:\/\/}" >> $GITHUB_ENV
 
-      # Used for auto-labeling PRs only. Actual release creation happens in publish-package.yml workflow
+      # Used for auto-labeling PRs only
       - uses: release-drafter/release-drafter@v6
         # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
         with:
           disable-autolabeler: false
+          # Only run auto-labeler without creating a release draft
+          config-name: release-drafter.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
