--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -71,6 +71,15 @@ jobs:
         run: |
           echo "PACKAGE_VERSION=$(node -p "require('./packages/core/package.json').version")" >> $GITHUB_OUTPUT
 
+      - name: Release depended libraries
+        run: |
+          pnpm p:rtv publish --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }}
+          pnpm p:rt publish --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }}
+          pnpm p:ut publish --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
       - name: Create GitHub Release
         id: create-release
         uses: release-drafter/release-drafter@v5
