--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,32 +1,52 @@
 {
   "name": "@chatora/runtime",
-  "version": "0.0.0",
+  "type": "module",
+  "version": "0.0.1-beta.3",
   "private": false,
+  "description": "Framework for creating custom elements with JSX function components",
+  "author": "nuco <takuma-ru@takumaru.dev> (https://github.com/takuma-ru/)",
+  "license": "MPL-2.0",
+  "homepage": "https://github.com/nucoui/chatora",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nucoui/chatora/tree/main/packages/runtime"
+  },
+  "bugs": {
+    "url": "https://github.com/nucoui/chatora/issues",
+    "email": "takuma-ru@takumaru.dev"
+  },
   "exports": {
     ".": {
       "types": "./dist/main.d.ts",
-      "import": "./dist/main.mjs",
-      "require": "./dist/main.js"
+      "import": "./dist/main.js",
+      "require": "./dist/main.cjs"
     },
     "./JSX": {
       "types": "./types/JSX.namespace.d.ts"
     },
     "./jsx-runtime": {
       "types": "./dist/jsx-runtime.d.ts",
-      "import": "./dist/jsx-runtime.mjs",
-      "require": "./dist/jsx-runtime.js"
+      "import": "./dist/jsx-runtime.js",
+      "require": "./dist/jsx-runtime.cjs"
     },
     "./jsx-dev-runtime": {
       "types": "./dist/jsx-dev-runtime.d.ts",
-      "import": "./dist/jsx-dev-runtime.mjs",
-      "require": "./dist/jsx-dev-runtime.js"
+      "import": "./dist/jsx-dev-runtime.js",
+      "require": "./dist/jsx-dev-runtime.cjs"
     }
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/",
+    "provenance": true
   },
   "scripts": {
     "build": "tsup",
     "watch": "tsup --watch",
     "lint": "eslint .",
-    "test": "tsup && vitest run --coverage"
+    "test": "tsup && vitest run --coverage",
+    "release": "rlse",
+    "release:test": "rlse -l patch -k config,commit-changes,create-release-branch --dry-run"
   },
   "dependencies": {
     "@types/hast": "^3.0.4"
@@ -34,6 +54,7 @@
   "devDependencies": {
     "@chatora/config": "workspace:*",
     "@chatora/reactivity": "workspace:*",
+    "@takuma-ru/rlse": "catalog:",
     "@vitest/coverage-v8": "3.1.1",
     "eslint": "catalog:",
     "tsup": "catalog:",
