--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -40,6 +40,11 @@
     "registry": "https://registry.npmjs.org/",
     "provenance": true
   },
+  "files": [
+    "README.md",
+    "dist",
+    "package.json"
+  ],
   "scripts": {
     "build": "tsup",
     "watch": "tsup --watch",
