fix: add missing newline at end of package.json

--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -32,6 +32,11 @@
     "registry": "https://registry.npmjs.org/",
     "provenance": true
   },
+  "files": [
+    "README.md",
+    "dist",
+    "package.json"
+  ],
   "scripts": {
     "build": "tsup",
     "watch": "tsup --watch",
