--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -58,9 +58,9 @@ jobs:
       - name: Release
         run: |
           if [ "${{ github.event.inputs.pre }}" == "true" ]; then
-            pnpm p:core release --level ${{ github.event.inputs.level }} --pre
+            pnpm p:core release --level ${{ github.event.inputs.level }} -k --pre
           else
-            pnpm p:core release --level ${{ github.event.inputs.level }}
+            pnpm p:core release --level ${{ github.event.inputs.level }} -k
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -73,9 +73,9 @@ jobs:
 
       - name: Release depended libraries
         run: |
-          pnpm p:rtv release --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }}
-          pnpm p:rt release --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }}
-          pnpm p:ut release --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }}
+          pnpm p:rtv release --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }} -k create-release-branch,build
+          pnpm p:rt release --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }} -k create-release-branch,build
+          pnpm p:ut release --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }} -k create-release-branch,build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
