--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -18,6 +18,7 @@ on:
           - minor
           - major
           - preup
+  pull_request:
 
 jobs:
   release:
@@ -76,9 +77,18 @@ jobs:
           pnpm p:rtv release --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }} -k create-release-branch,build
           pnpm p:rt release --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }} -k create-release-branch,build
           pnpm p:ut release --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }} -k create-release-branch,build
+          pnpm p:react release --level fix --release-version ${{ steps.get-package-info.outputs.PACKAGE_VERSION }} -k create-release-branch,build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: "Release ${{ steps.get-package-info.outputs.PACKAGE_VERSION }}"
+          body: "Automated PR for release ${{ steps.get-package-info.outputs.PACKAGE_VERSION }}"
+          base: ${{ github.ref_name }}
 
       - name: Create GitHub Release
         id: create-release
