feat: add build step to PR testing workflow

--- a/.github/workflows/test-on-pr.yml
+++ b/.github/workflows/test-on-pr.yml
@@ -50,6 +50,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
+      - name: Build
+        run: pnpm build
+
       # Run tests based on changed packages
       - name: Detect changed packages
         id: filter
