Refactor ChatoraWrapper and DeclarativeShadowDom components; remove ShadowDom component and update utility types

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pg:vanilla": "pnpm -C playgrounds/vanilla",
 
     "watch": "concurrently \"pnpm p:rtv watch\" \"pnpm p:rt watch\" \"pnpm p:core watch\"",
-    "build": "pnpm p:rtv build && pnpm p:rt build && pnpm p:core build && pnpm p:react build"
+    "build": "pnpm p:ut build && pnpm p:rtv build && pnpm p:rt build && pnpm p:core build && pnpm p:react build"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
