--- a/playgrounds/react/package.json
+++ b/playgrounds/react/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@chatora/react": "workspace:*",
+    "@chatora/util": "workspace:*",
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
