--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "p:ts": "pnpm -C packages/transpiler",
     "p:ut": "pnpm -C packages/util",
     "p:react": "pnpm -C packages/react",
+    "p:vue": "pnpm -C packages/vue",
 
     "pg:nextjs:app": "pnpm -C playgrounds/nextjs/app",
     "pg:nextjs:chatora": "pnpm -C playgrounds/nextjs/chatora",
     "pg:react": "pnpm -C playgrounds/react",
     "pg:vanilla": "pnpm -C playgrounds/vanilla",
+    "pg:vue": "pnpm -C playgrounds/vue",
 
     "watch": "concurrently \"pnpm p:rtv watch\" \"pnpm p:rt watch\" \"pnpm p:core watch\"",
-    "build": "pnpm p:ut build && pnpm p:rtv build && pnpm p:rt build && pnpm p:core build && pnpm p:react build"
+    "build": "pnpm p:ut build && pnpm p:rtv build && pnpm p:rt build && pnpm p:core build && pnpm p:react build && pnpm p:vue build"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
