🚀 Performance tuning and type export for ChatoraWrapper in React package
- Improved ChatoraWrapper performance with useMemo/useCallback and stable event handlers.
- Added type export for toReactEmits and fixed package.json types path.
- Ensured event handler registration/removal is stable and ESLint-compliant.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "p:react": "pnpm -C packages/react",
     "p:vue": "pnpm -C packages/vue",
 
+    "cfg": "pnpm -C config",
+
     "pg:nextjs:app": "pnpm -C playgrounds/nextjs/app",
     "pg:nextjs:chatora": "pnpm -C playgrounds/nextjs/chatora",
     "pg:react": "pnpm -C playgrounds/react",
