--- a/config/package.json
+++ b/config/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@antfu/eslint-config": "^3.8.0",
+    "@eslint-react/eslint-plugin": "^1.51.0",
     "@tsconfig/node22": "^22.0.0"
   },
   "devDependencies": {
