--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -17,7 +17,7 @@
   },
   "exports": {
     ".": {
-      "types": "./dist/main.d.ts",
+      "types": "./dist/types/main.d.ts",
       "import": "./dist/main.js",
       "require": "./dist/main.cjs"
     },
