--- a/config/package.json
+++ b/config/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@antfu/eslint-config": "^3.8.0",
     "@eslint-react/eslint-plugin": "^1.51.0",
-    "@tsconfig/node22": "^22.0.0"
+    "@tsconfig/node22": "^22.0.0",
+    "eslint-plugin-svelte": "^3.9.1"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.7",
