--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "p:ut": "pnpm -C packages/util",
     "p:react": "pnpm -C packages/react",
     "p:vue": "pnpm -C packages/vue",
-
+    "p:svelte": "pnpm -C packages/svelte",
     "cfg": "pnpm -C config",
-
     "pg:nextjs:app": "pnpm -C playgrounds/nextjs/app",
     "pg:nextjs:chatora": "pnpm -C playgrounds/nextjs/chatora",
     "pg:react": "pnpm -C playgrounds/react",
     "pg:vanilla": "pnpm -C playgrounds/vanilla",
     "pg:vue": "pnpm -C playgrounds/vue",
-
+    "pg:svelte": "pnpm -C playgrounds/svelte",
     "watch": "concurrently \"pnpm p:rtv watch\" \"pnpm p:rt watch\" \"pnpm p:core watch\"",
-    "build": "pnpm p:ut build && pnpm p:rtv build && pnpm p:rt build && pnpm p:core build && pnpm p:react build && pnpm p:vue build"
+    "build": "pnpm p:ut build && pnpm p:rtv build && pnpm p:rt build && pnpm p:core build && pnpm p:react build && pnpm p:vue build && pnpm p:svelte build"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
@@ -29,5 +28,10 @@
   "volta": {
     "node": "22.10.0",
     "pnpm": "10.8.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
