🐛 Fix release command to use p:rtv instead of p:core for @chatora/reactivity
The release step for @chatora/reactivity was incorrectly using the p:core command.
This commit updates the workflow to use p:rtv, ensuring the correct package is released.

--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -59,9 +59,9 @@ jobs:
       - name: Release @chatora/reactivity
         run: |
           if [ "${{ github.event.inputs.pre }}" == "true" ]; then
-            pnpm p:core release --level ${{ github.event.inputs.level }} --pre
+            pnpm p:rtv release --level ${{ github.event.inputs.level }} --pre
           else
-            pnpm p:core release --level ${{ github.event.inputs.level }}
+            pnpm p:rtv release --level ${{ github.event.inputs.level }}
           fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
