🧩 Add SSR guard, generic improvements, and extend JSX types for headings
- Add SSR environment guard to functionalCustomElement to prevent usage in SSR.
- Improve generics for functionalDeclarativeCustomElement for better type inference.
- Add ComponentProps and ComponentEmits utility types to FunctionalCustomElement.d.ts.
- Add h2-h6 heading element types to JSX.namespace.d.ts and IntrinsicElements.

--- a/playgrounds/nextjs/chatora/package.json
+++ b/playgrounds/nextjs/chatora/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "@chatora/util": "workspace:*",
-    "chatora": "workspace:*"
+    "chatora": "workspace:*",
+    "hast": "^1.0.0"
   },
   "devDependencies": {
-    "tsup": "catalog:",
-    "typescript": "catalog:",
+    "@types/hast": "^3.0.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tsup": "catalog:",
+    "typescript": "catalog:"
   }
 }
