🧹 Refactor Vue wrapper to TypeScript, update Button usage, and clean up exports
- Migrated `ChatoraWrapper.vue` to `ChatoraWrapper.ts` in `@chatora/vue` for better type safety and maintainability.
- Updated all playground Button components to use function return instead of `render`.
- Adjusted exports and import paths for Vue wrapper and related package.json fields.
- Removed unused files and cleaned up code for consistency.
- Improved SSR handling and event binding in Vue wrapper.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -22,9 +22,9 @@
       "require": "./dist/main.cjs"
     },
     "./components/ChatoraWrapper.vue": {
-      "types": "./dist/types/components/ChatoraWrapper.vue.d.ts",
-      "import": "./dist/components/ChatoraWrapper.vue.js",
-      "require": "./dist/components/ChatoraWrapper.vue.cjs"
+      "types": "./dist/types/components/ChatoraWrapper.d.ts",
+      "import": "./dist/components/ChatoraWrapper.js",
+      "require": "./dist/components/ChatoraWrapper.cjs"
     }
   },
   "publishConfig": {
